Bug 103020 - CSS parser does not support -webkit-mask-size for -webkit-mask shorthand
Summary: CSS parser does not support -webkit-mask-size for -webkit-mask shorthand
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dirk Schulze
URL:
Keywords:
Depends on:
Blocks: 95389
  Show dependency treegraph
 
Reported: 2012-11-21 22:24 PST by Dirk Schulze
Modified: 2012-11-28 16:12 PST (History)
7 users (show)

See Also:


Attachments
Patch (19.16 KB, patch)
2012-11-23 08:46 PST, Dirk Schulze
hyatt: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Schulze 2012-11-21 22:24:27 PST
CSS parser does not support -webkit-mask-size for -webkit-mask shorthand. It doesn't look correct. I would like to fix it, but will wait for comments if there is a reason for it. -webkit-mask-size itself is implemented and seems to work.
Comment 1 Dirk Schulze 2012-11-23 08:46:25 PST
Created attachment 175813 [details]
Patch
Comment 2 Dave Hyatt 2012-11-28 13:56:22 PST
Comment on attachment 175813 [details]
Patch

r=me
Comment 3 Dirk Schulze 2012-11-28 16:12:35 PST
Committed r136072: <http://trac.webkit.org/changeset/136072>